--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "cross-env PORT=3000 NODE_ENV=development DEBUG=nodeapi:* nodemon"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.11.14",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.7"
   }
 }
