--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env PORT=3000 NODE_ENV=development DEBUG=nodeapi:* nodemon"
+    "dev": "cross-env PORT=3000 NODE_ENV=development DEBUG=nodeapi:* nodemon",
+    "installDB": "node install_db.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
