Elimadas las vistas de eslint

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "dev": "cross-env PORT=3000 NODE_ENV=development DEBUG=nodeapi:* nodemon",
     "installDB": "node install_db.js",
-    "repaso" : "./node_modules/.bin/eslint ./routes/** ./views/** app.js"
+    "repaso" : "./node_modules/.bin/eslint ./routes/** app.js"
   },
   "repository": {
     "type": "git",
