--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "dev": "cross-env PORT=3000 NODE_ENV=development DEBUG=nodeapi:* nodemon",
     "installDB": "node install_db.js",
-    "repaso" : "./node_modules/.bin/eslint ./routes/** app.js"
+    "repaso": "./node_modules/.bin/eslint ./routes/** app.js"
   },
   "repository": {
     "type": "git",
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "i18n": "^0.13.2",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7"
