--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/usuario616/IntroJavaScript.git"
+    "url": "https://github.com/usuario616/nodepopAGR"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -24,11 +24,13 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.7"
+    "nodemailer": "^6.6.0"
   },
   "devDependencies": {
-    "eslint": "^7.19.0"
+    "eslint": "^7.19.0",
+    "nodemon": "^2.0.7"
   }
 }
