--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cote": "^1.0.2",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
@@ -24,6 +26,7 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "i18n": "^0.13.2",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
