--- a/microservices/package.json
+++ b/microservices/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cote": "^1.0.2"
+    "cote": "^1.0.2",
+    "jimp": "^0.16.1"
   }
 }
