--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env PORT=3000 NODE_ENV=development DEBUG=nodeapi:* nodemon",
     "thumbServ": "node microservices/thumbnailService.js",
     "installDB": "node install_db.js",
-    "repaso": "./node_modules/.bin/eslint ./routes/** app.js"
+    "repaso": "./node_modules/.bin/eslint ./routes/** app.js",
+    "test": "mocha ./test/test.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cote": "^1.0.2",
     "cross-env": "^7.0.3",
@@ -36,6 +38,8 @@
   },
   "devDependencies": {
     "eslint": "^7.19.0",
-    "nodemon": "^2.0.7"
+    "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
