--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 MONGODB_CONNECTION_STR = mongodb://localhost/namebd
 JWT_SECRET= secretToken
+VALID_JWT_FOR_TEST = aValidToken(JustForTestingPurpose)
