--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 MONGODB_CONNECTION_STR = mongodb://localhost/namebd
-JWT_SECRET= secretToken
+JWT_SECRET = secretToken
+USER_EMAIL = name@domain.com
+USER_PASSWORD = password
 VALID_JWT_FOR_TEST = aValidToken(JustForTestingPurpose)
